# es_stats

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  render.yaml
data/: es_stats.sqlite3
docs/: checklist.md  db_business_rules.md  decisions.md  phase4_analyses.md  schema.md  time_rules.md
docs/diagrams/: erd.md
src/es_stats/: logging.py
src/es_stats/cli/: main.py
src/es_stats/config/: settings.py
src/es_stats/db/: __init__.py  connection.py
src/es_stats/domain/: bars.py  missing_policy.py  windows.py
src/es_stats/repositories/: bars_1m_repo.py  bars_30m_repo.py  imports_repo.py  instruments_repo.py  sql_loader.py
src/es_stats/repositories/sql/bars_1m/: clear_temp.sql  create_temp.sql  insert_new.sql  update_existing.sql
src/es_stats/repositories/sql/bars_30m/: delete_range.sql  insert_range.sql
src/es_stats/repositories/sql/imports/: finalize_import.sql  insert_import.sql
src/es_stats/repositories/sql/instruments/: ensure_instrument.sql
src/es_stats/repositories/sql/schema/: 001_init.sql
src/es_stats/services/: completeness.py  csv_parser.py  resolution.py  time_fields.py
src/es_stats/web/: main.py
src/es_stats/web/templates/: base.html  home.html
tests/: conftest.py  test_bars_1m_upsert.py  test_bars_30m_rebuild.py  test_cli_contract.py  test_constraints.py  test_csv_parser.py  test_import_audit.py  test_import_end_to_end.py  test_missing_policy.py  test_resolution.py  test_schema_init.py  test_smoke.py  test_time_fields.py  test_windows.py
