[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "es-stats"
version = "0.1.0"
description = "Portfolio trading stats web app (FastAPI + templates + htmx + Plotly)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
